# Dowado-v2

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  readme_2.md
asset/css/: style.css
demo/: 01_Scraping_CareerNet.ipynb  02_Create_Index.ipynb  03_Supervisor_Agent.ipynb  04_Agentic_RAG.ipynb
demo/agent/: Supervisor_Adaptive_RAG.ipynb
demo/result/: CareerNet_CareerInfo.md
demo/scraping/: Scraping_CareerNet.ipynb
docs/: 2023~21 어디가 수시 입시결과.xlsx
documents/: CareerNet_UnivInfo.md  한국직업능력연구원_커리어넷 학과인터뷰.csv
src/: main.py
src/api/auth/: login_control.py  login_dao.py  login_dto.py  login_service.py
src/api/chat/: chat_constants.py  chat_control.py  chat_dao.py  chat_dto.py  chat_service.py  chat_utils.py
src/api/file/: file_control.py  file_service.py
src/api/mail/: mail_control.py  mail_dao.py  mail_dto.py  mail_service.py
src/api/report/: report_constants.py  report_control.py  report_dao.py  report_dto.py  report_service.py  report_utils.py
src/api/user_students/: student_control.py  student_dao.py  student_dto.py  student_service.py
src/api/user_teachers/: teacher_control.py  teacher_dao.py  teacher_dto.py  teacher_service.py
src/config/: __init__.py  dto.py  security.py  status.py
src/core/: __init__.py  cors.py  error.py  event.py  router.py
src/database/: __init__.py  models.py  session.py  tools.py
src/utils/: data_processing.py  use_model.py
