[tool.poetry]
name = "dowado-v2-server"
version = "0.1.0"
description = ""
authors = ["ormor <htth815@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.8"
pydantic = "^2.9.2"
pydantic-settings = "^2.5.2"
fastapi = "^0.115.0"
sqlalchemy = "^2.0.35"
fastapi-mail = "^1.4.1"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
langchain = "^0.3.2"
langchain-community = "^0.3.1"
langchain-openai = "^0.2.2"
langchain-core = "^0.3.9"
redis = "^5.1.1"
dacite = "^1.8.1"
pycryptodome = "^3.21.0"
python-jose = "^3.3.0"
pillow = "^10.4.0"
passlib = "^1.7.4"
bcrypt = "^4.2.0"
pyjwt = "^2.9.0"
uvicorn = "^0.31.0"
langchain-postgres = "^0.0.12"
psycopg = "^3.2.3"
langchain-teddynote = "^0.0.37"
python-multipart = "^0.0.12"
greenlet = "^3.1.1"
tiktoken = "^0.8.0"
langchainhub = "^0.1.21"
chromadb = "^0.5.12"
langgraph = "^0.2.35"
langchain-text-splitters = "^0.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
